# pyrospec

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: test-pypi.yml  test.yml
pyrospec/: __init__.py  enums.py  fit.py  models.py  specdata.py  spectrum.py
tests/: test_fit.py  test_specdata.py
tests/inputs/: fit_input_x_shifted.json  simulate_input.json
