[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrospec"
dynamic = ["version"]
description = "A Python package for molecular pyrometry"
authors = [
    { name = "Jan Vorac", email = "janvorac@proton.me" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas", 
    "pydantic",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "pyrospec.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pyrospec*"]